# xmonad-config

./: .gitignore  .stylish-haskell.yaml  README.md  build  install_deps  make_pkgs  my-xmonad.cabal  stack.yaml  xmonad.hs
icons/: wifi_0.xpm  wifi_1.xpm  wifi_2.xpm  wifi_3.xpm  wifi_4.xpm  wifi_5.xpm  wifi_6.xpm  wifi_7.xpm  wifi_8.xpm
lib/: ACPI.hs  Capture.hs  General.hs  Notify.hs  Power.hs  Process.hs  SendXMsg.hs  Shell.hs  Theme.hs  WorkspaceMon.hs
lib/DBus/: Backlight.hs  Common.hs  IntelBacklight.hs  Internal.hs  Screensaver.hs
lib/Data/Internal/: DBus.hs  Dependency.hs
lib/Internal/: DMenu.hs
lib/XMonad/Internal/: Dependency.hs  DependencyX.hs  Dependency_.hs  IO.hs  Notify.hs  Process.hs  Shell.hs  Theme.hs
lib/XMonad/Internal/Command/: DMenu.hs  Desktop.hs  Power.hs
lib/XMonad/Internal/Concurrent/: ACPIEvent.hs  ClientMessage.hs  DynamicWorkspaces.hs  Removable.hs  VirtualBox.hs
lib/XMonad/Internal/DBus/: Common.hs  Control.hs  IntelBacklight.hs  Removable.hs  Screensaver.hs
lib/XMonad/Internal/DBus/Brightness/: ClevoKeyboard.hs  Common.hs  IntelBacklight.hs
lib/Xmobar/: Backlight.hs  Common.hs  Screensaver.hs
lib/Xmobar/Plugins/: BacklightCommon.hs  Bluetooth.hs  ClevoKeyboard.hs  Common.hs  Device.hs  IntelBacklight.hs  NetworkManager.hs  Screensaver.hs  VPN.hs
scripts/: .query_pkgs  aur_deps  pacman_deps  runtime_pkgs
