name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
                  
library
    hs-source-dirs: lib
    exposed-modules: SendXMsg
                   , ACPI
                   , Theme
                   , Notify
                   , Shell
                   , DBus.Common
                   , DBus.IntelBacklight
                   , Xmobar.Plugins.Screensaver
                   , Xmobar.Plugins.IntelBacklight
    build-depends: base
                 , X11 >= 1.9.1
                 , colour >= 2.3.5
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
                 , fdo-notify
                 , dbus >= 1.2.7
                 , text >= 1.2.3.1
                 , xmobar
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    default-language: Haskell2010

executable xmonad
    main-is: bin/xmonad.hs
    build-depends: base
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
                 , xmonad-extras >= 0.15.2
                 , X11 >= 1.9.1
                 , unix >= 2.7.2.2
                 , process >= 1.6.5.0
                 , directory >= 1.3.3.0
                 , containers >= 0.6.0.1
                 , dbus >= 1.2.7
                 , my-xmonad
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded

executable xmobar
    main-is: bin/xmobar.hs
    build-depends: base
                 , xmonad >= 0.13
                 , dbus >= 1.2.7
                 , xmobar
                 , my-xmonad
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded

executable xit-event
    main-is: bin/xit-event.hs
    build-depends: base
                 , X11 >= 1.9.1
                 , my-xmonad
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded

executable powermon
    main-is: bin/powermon.hs
    build-depends: base
                 , tcp-streams >= 1.0.1.1
                 , io-streams >= 1.5.1.0
                 , bytestring >= 0.10.8.2
                 , my-xmonad
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded
