name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
                  
library
    hs-source-dirs: lib
    exposed-modules: SendXMsg
                   , ACPI
                   , Theme
                   , Notify
                   , Shell
                   , Power
                   , WorkspaceMon
                   , Capture
                   , General
                   , Internal.DMenu
                   , DBus.Common
                   , DBus.IntelBacklight
                   , DBus.Internal
                   , DBus.Screensaver
                   , Process
                   , Xmobar.Common
                   , Xmobar.Plugins.Bluetooth
                   , Xmobar.Plugins.IntelBacklight
                   , Xmobar.Plugins.Screensaver
                   , Xmobar.Plugins.VPN
    build-depends: X11 >= 1.9.1
                 , base
                 , bytestring >= 0.10.8.2
                 , colour >= 2.3.5
                 , containers >= 0.6.0.1
                 , dbus >= 1.2.7
                 , fdo-notify
                 , io-streams >= 1.5.1.0
                 , mtl >= 2.2.2
                 , unix >= 2.7.2.2
                 , tcp-streams >= 1.0.1.1
                 , text >= 1.2.3.1
                 , directory >= 1.3.3.0
                 , process >= 1.6.5.0
                 , xmobar
                 , xmonad-extras >= 0.15.2
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    default-language: Haskell2010

executable xmonad
    main-is: bin/xmonad.hs
    build-depends: X11 >= 1.9.1
                 , base
                 , containers >= 0.6.0.1
                 , directory >= 1.3.3.0
                 , process >= 1.6.5.0
                 , my-xmonad
                 , unix >= 2.7.2.2
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded

executable xmobar
    main-is: bin/xmobar.hs
    build-depends: base
                 , dbus >= 1.2.7
                 , my-xmonad
                 , xmobar
                 , xmonad >= 0.13
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded