name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
                  
library
    hs-source-dirs: lib
    exposed-modules: XMonad.Internal.Concurrent.ClientMessage
                   , XMonad.Internal.Concurrent.ACPIEvent
                   , XMonad.Internal.Concurrent.DynamicWorkspaces
                   , XMonad.Internal.Theme
                   , XMonad.Internal.Notify
                   , XMonad.Internal.Shell
                   , XMonad.Internal.Dependency
                   , XMonad.Internal.IO
                   , XMonad.Internal.Command.Desktop
                   , XMonad.Internal.Command.DMenu
                   , XMonad.Internal.Command.Power
                   , XMonad.Internal.DBus.Brightness.IntelBacklight
                   , XMonad.Internal.DBus.Brightness.ClevoKeyboard
                   , XMonad.Internal.DBus.Brightness.Common
                   , XMonad.Internal.DBus.Control
                   , XMonad.Internal.DBus.Common
                   , XMonad.Internal.DBus.Screensaver
                   , XMonad.Internal.DBus.Removable
                   , XMonad.Internal.Process
                   , Xmobar.Plugins.Common
                   , Xmobar.Plugins.BacklightCommon
                   , Xmobar.Plugins.Bluetooth
                   , Xmobar.Plugins.ClevoKeyboard
                   , Xmobar.Plugins.Device
                   , Xmobar.Plugins.IntelBacklight
                   , Xmobar.Plugins.Screensaver
                   , Xmobar.Plugins.VPN
                   , DBus.Internal
    build-depends: X11 >= 1.9.1
                 , base
                 , bytestring >= 0.10.8.2
                 , colour >= 2.3.5
                 , containers >= 0.6.0.1
                 , dbus >= 1.2.7
                 , fdo-notify
                 , io-streams >= 1.5.1.0
                 , mtl >= 2.2.2
                 , unix >= 2.7.2.2
                 , tcp-streams >= 1.0.1.1
                 , text >= 1.2.3.1
                 , directory >= 1.3.3.0
                 , process >= 1.6.5.0
                 , filepath >= 1.4.2.1
                 , split >= 0.2.3.4
                 , xmobar
                 , xmonad-extras >= 0.15.2
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
                 , aeson >= 2.0.3.0
    ghc-options: -Wall -Werror -Wpartial-fields -fno-warn-missing-signatures
    default-language: Haskell2010

executable xmonad
    main-is: bin/xmonad.hs
    build-depends: X11 >= 1.9.1
                 , base
                 , process >= 1.6.5.0
                 , my-xmonad
                 , xmonad >= 0.13
                 , xmonad-contrib >= 0.13
    default-language: Haskell2010
    ghc-options: -Wall -Werror -Wpartial-fields -fno-warn-missing-signatures -threaded

executable xmobar
    main-is: bin/xmobar.hs
    build-depends: base
                 , dbus >= 1.2.7
                 , my-xmonad
                 , xmobar
                 , xmonad >= 0.13
                 , process >= 1.6.5.0
                 , filepath >= 1.4.2.1
                 , xmonad-contrib >= 0.13
                 , directory >= 1.3.3.0
                 , unix >= 2.7.2.2
    default-language: Haskell2010
    ghc-options: -Wall -Werror -Wpartial-fields -fno-warn-missing-signatures -threaded
